envergo/static/sass/project.scss
/* ... */
// For print, move the project summary above the project result
@media only print {
  .moulinette-result-body #content {
    display: flex;
    flex-flow: column;

    #project-summary {
      order: 1;
    }

    #project-result {
      order: 2;
    }
  }
}

footer {
  padding-top: 0;
  box-shadow: initial;
  z-index: 1000; // to be above the leaflet map
}

#action-banner {
  background-color: var(--blue-france-sun-113-625);
  text-align: center;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  width: 100vw;

  @media print {
    display: none;
  }

  .banner-item {
    flex: 0 1 auto;
  }

  #feedback-form {
    display: flex;
    align-items: center;
    justify-content: center;

    > p {
      color: #fff;
      margin: 0 1em 0 0;
    }
  }

  #copy-btn-container {
    #copy-btn {
      position: relative;
    }

    #btn-clicked-message {
      position: absolute;
      top: 9px;
      right: -70%;
      color: #fff;
      align-items: center;
      transition: opacity 0.5s ease-out;
      opacity: 0;

      img {
        height: 1em;
      }
    }
  }
}

/**
 * Impression
 */

.print-only {
  display: none;
}

@media print {
  // Reduce font size to a more compact print
  :root {
    font-size: 85%;
  }

  // Use the entire page width
  #main-container article {
    width: 100%;
    max-width: 100%;
    flex: 1;
  }

  // Hide common template elements
  body > header,
  body > footer,
  #top-bar,
  .hide-print {
    display: none;
  }

  // Make sure accordion content is visible
  .fr-accordion__title .fr-accordion__btn {
    font-weight: bold;
  }

  .fr-collapse {
    --collapse-max-height: 0;
    --collapse: auto;
    --collapser: "";

    overflow: auto;
    max-height: auto;
    max-height: inherit;
    padding-top: 1rem;
    padding-bottom: 1rem;
  }

  .fr-collapse::before {
    display: none;
  }

  .fr-collapse:not(.fr-collapse--expanded) {
    visibility: visible;
  }

  .fr-collapse:not(.fr-collapse--expanded)::before {
    margin-top: 0;
  }

  // Some little quirks
  section.regulation button.read-more-btn {
    display: none;
  }

  // Prevent map and images to take up the entire page
  .fr-content-media {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
  }

  // Hide the useless arrow icon for external links
  .fr-link[target="_blank"]::after {
    display: none;
  }

  // Underline links in pdf
  a {
    text-decoration: underline;
  }

  // for all links but anchors : display in blue with the url in parenthesis
  a:not([href^="#"]) {
    color: linktext;
  }

  a:not([href^="#"], .no-href-print)::after {
    content: " (" attr(href) ") ";
  }

  a:not([href^="#"])::after {
    // these styles are necessary to override some dsfr styles
    mask-size: auto;
    mask-image: none;
    background-color: inherit;

    --icon-size: inherit;

    display: inherit;
  }

  // Make sure leaflet controls are not printed
  .leaflet-control {
    display: none;
  }

  // Enforce background color for tags
  .fr-tag {
    -webkit-print-color-adjust: exact;
    print-color-adjust: exact;
  }

  .print-only {
    display: inherit;
  }

  .moulinette-result-body {
    .fr-grid-row {
      display: block;
    }

    .fr-grid-row > div {
      width: unset;
      max-width: unset;
    }

    #moulinette-result-container {
      overflow: inherit;
    }

    #map-container .leaflet-control-container {
      display: none;
    }
  }
}
/* ... */

